added page number indicator

--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
     <nav class="navbar navbar-dark fixed-top">
       <div class="container-fluid">
         <span class="navbar-brand">GIPHY: Search</span>
-        <form class="d-flex" onsubmit="return false">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Pizza"
-            aria-label="Search"
-          />
+        <span class="text-white display-9" id="page-nums">pg 1 of 4</span>
+        <form class="d-flex flex-wrap flex-sm-nowrap" onsubmit="return false">
+          <input class="form-control me-2" type="search" placeholder="Pizza" aria-label="Search">
           <button class="btn btn-dark" type="submit">Search</button>
         </form>
       </div>
